VZDEV/src/objects/CCPM_LeadChannelSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>CCPM_LeadChannelValue__c</fullName>
        <label>Lead Channel Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_LeadSourceValues__c</fullName>
        <label>Lead Source Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadStatusValues__c</fullName>
        <label>Lead Status Values</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Lead Channel Setting</label>
    <pluralLabel>Lead Channel Settings</pluralLabel>
</CustomObject>